# gtk-todo-list

./: Cargo.toml  README.md
src/: main.rs  state.rs  ui.glade
src/client/: delete_selection.rs  extractor.rs  file.rs  mod.rs  save.rs
src/model/: mod.rs  todo.rs
src/ui/: add_new_todo.glade  add_todo.rs  add_todo_dialog.glade  add_todo_dialog.rs  delete_selection.rs  error_dialog.rs  main_menu.rs  main_window.glade  main_window.rs  mod.rs  todo_treeview.rs  treeview_todo.rs
