[package]
name = "gtk"
version = "0.1.0"
authors = ["Southball <jamie.choi.mail.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.1", features = ["v3_16"] }
gio = "0.9.0"
glib = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
